--- a/css/global.css
+++ b/css/global.css
@@ -1,26 +1,26 @@
 html,
 body {
-	height: 100%;
+  height: 100%;
 }
 
-body{
-	font-family: 'Readex Pro', sans-serif;
+body {
+  font-family: "Readex Pro", sans-serif;
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .main {
-	flex: 1 0 auto;
+  flex: 1 0 auto;
 }
 .footer {
-	flex: 0 0 auto;
+  flex: 0 0 auto;
 }
 
-.container{
+.container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 15px;
