--- a/css/style.css
+++ b/css/style.css
@@ -1,120 +1,120 @@
-@import url('./reset.css');
-@import url('./global.css');
+@import url("./reset.css");
+@import url("./global.css");
 
-@keyframes fall{
-    0%{
-    }
-    100%{
-        top: calc(100% - 50px)
-    }
+@keyframes fall {
+  0% {
+  }
+  100% {
+    top: calc(100% - 50px);
+  }
 }
 
-.popup-total{
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 999;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(2px);
-    opacity: 0;
-    visibility: hidden;
-    transition: ease 0.3s;
+.popup-total {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+  opacity: 0;
+  visibility: hidden;
+  transition: ease 0.3s;
 }
 
-.popup-total.show{
-    opacity: 1;
-    visibility: visible;
+.popup-total.show {
+  opacity: 1;
+  visibility: visible;
 }
 
-.popup-total__body{
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    padding: 30px;
-    border-radius: 15px;
+.popup-total__body {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 15px;
 }
 
-.popup-total__title{
-    font-size: 40px;
-    line-height: 46px;
-    font-weight: 700;
-    margin-bottom: 30px;
+.popup-total__title {
+  font-size: 40px;
+  line-height: 46px;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
 
-.popup-total__result{
-    font-size: 30px;
-    line-height: 36px;
-    margin-bottom: 30px;
+.popup-total__result {
+  font-size: 30px;
+  line-height: 36px;
+  margin-bottom: 30px;
 }
 
-.popup-total__btn{
-    font-size: 20px;
-    padding: 8px 15px;
-    border-radius: 5px;
-    align-self: flex-end;
-    color: #fff;
-    background-color: #1d1d1d;
-    cursor: pointer;
+.popup-total__btn {
+  font-size: 20px;
+  padding: 8px 15px;
+  border-radius: 5px;
+  align-self: flex-end;
+  color: #fff;
+  background-color: #1d1d1d;
+  cursor: pointer;
 }
 
-.start-btn{
-    font-size: 36px;
-    line-height: 44px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transform-origin: 0 0;
-    cursor: pointer;
-    padding: 15px 30px;
-    border: 2px solid #c4c4c4;
-    border-radius: 5px;
-    background-color: #fefefe;
-    transition: ease 0.3s;
+.start-btn {
+  font-size: 36px;
+  line-height: 44px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transform-origin: 0 0;
+  cursor: pointer;
+  padding: 15px 30px;
+  border: 2px solid #c4c4c4;
+  border-radius: 5px;
+  background-color: #fefefe;
+  transition: ease 0.3s;
 }
 
-.start-btn.hide{
-    transform: scale(0.1);
-    opacity: 0;
-    visibility: hidden;
+.start-btn.hide {
+  transform: scale(0.1);
+  opacity: 0;
+  visibility: hidden;
 }
 
-.letter{
-    font-size: 50px;
-    position: absolute;
-    color: #523CFE;
-    transition: ease 0.1s;
-    animation: 10s fall linear;
+.letter {
+  font-size: 50px;
+  position: absolute;
+  color: #523cfe;
+  transition: ease 0.1s;
+  animation: 10s fall linear;
 }
 
-.letter.deleted--good{
-    transform: scale(1.2);
-    color: #30FF37;
+.letter.deleted--good {
+  transform: scale(1.2);
+  color: #30ff37;
 }
 
-.letter.deleted--bad{
-    transform: scale(1.2);
-    color: #FF2C28;
+.letter.deleted--bad {
+  transform: scale(1.2);
+  color: #ff2c28;
 }
 
-.deadzone{
-    height: 10vh;
-    background-color: #1b1b1b;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 30px;
-    transition: ease 0.1s;
+.deadzone {
+  height: 10vh;
+  background-color: #1b1b1b;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 30px;
+  transition: ease 0.1s;
 }
-.deadzone.incorrect{
-    background-color: #FF2C28; 
+.deadzone.incorrect {
+  background-color: #ff2c28;
 }
 
-.user-info{
-    color: #fff;
+.user-info {
+  color: #fff;
 }
